@@ -132,7 +132,7 @@
         <version.jakarta.websocket.jakarta-websocket-api>2.1.0</version.jakarta.websocket.jakarta-websocket-api>
         <version.junit>4.13.2</version.junit>
         <version.netty>4.2.10.Final</version.netty>
-        <version.io.undertow>2.4.1.Final</version.io.undertow>
+        <version.io.undertow>2.4.2.Final</version.io.undertow>
         <version.org.apache.httpcomponents>4.5.14</version.org.apache.httpcomponents>
         <version.org.jboss.logging>3.6.3.Final</version.org.jboss.logging>
         <version.org.jboss.logging.processor>3.0.4.Final</version.org.jboss.logging.processor>
@@ -160,7 +160,7 @@
         <!-- Checkstyle configuration -->
         <linkXRef>false</linkXRef>
         <version.io.undertow.build.checkstyle-config>2.0.0.Final</version.io.undertow.build.checkstyle-config>
-        <version.com.github.spotbugs-maven-plugin>4.7.3.6</version.com.github.spotbugs-maven-plugin>
+        <version.com.github.spotbugs-maven-plugin>4.9.8.3</version.com.github.spotbugs-maven-plugin>
 
         <!-- Non-default maven plugin versions and configuration -->
         <version.org.wildfly.openssl>2.2.5.Final</version.org.wildfly.openssl>
@@ -581,12 +581,13 @@
         <profile>
             <id>jdk18</id>
             <activation>
-                <jdk>[18,24)</jdk>
+                <jdk>[17,24)</jdk>
             </activation>
             <properties>
                 <modular.jdk.props>-Djava.security.manager=allow</modular.jdk.props>
             </properties>
         </profile>
+
         <profile>
             <id>verbose</id>
             <activation>
@@ -599,6 +600,25 @@
                 <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
                 <maven.compiler.showWarnings>false</maven.compiler.showWarnings>
             </properties>
+        </profile>
+
+        <profile>
+            <id>jdk23</id>
+            <activation>
+                <jdk>[23,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                                <!-- SE 23+ requires explicit config to turn on annotation processing -->
+                            <compilerArgument>-proc:full</compilerArgument>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
